--- a/app/src/main/res/layout/news_recycler_item.xml
+++ b/app/src/main/res/layout/news_recycler_item.xml
@@ -36,16 +36,17 @@
 
     <ImageView
         android:id="@+id/actu_image"
-        android:layout_width="74dp"
-        android:layout_height="58dp"
+        android:layout_width="80dp"
+        android:layout_height="60dp"
         android:layout_marginStart="9dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="9dp"
         android:text="Core de l'actualité"
+        app:layout_constraintBottom_toTopOf="@+id/news_core"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.166"
         app:layout_constraintStart_toEndOf="@+id/actu_title"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.65"
         app:srcCompat="@drawable/ic_home_black_24dp" />
 
     <TextView
