--- a/app/src/main/res/layout/artist_recycler_item.xml
+++ b/app/src/main/res/layout/artist_recycler_item.xml
@@ -10,6 +10,9 @@
         android:id="@+id/imageButton"
         android:layout_width="114dp"
         android:layout_height="123dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,48 +23,40 @@
         android:id="@+id/artist_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
         android:text="Nom artiste"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButton"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/genres_chip_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/imageButton"
-        app:layout_constraintTop_toBottomOf="@+id/artist_name_text_view">
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </com.google.android.material.chip.ChipGroup>
-
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/pays_chip_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/imageButton"
-        app:layout_constraintTop_toBottomOf="@+id/genres_chip_group">
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chip2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.chip.ChipGroup>
+        app:layout_constraintTop_toTopOf="@+id/imageButton" />
 
     <TextView
-        android:id="@+id/category_text_view"
+        android:id="@+id/categorie_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:text="TextView"
+        app:layout_constraintStart_toStartOf="@+id/artist_name_text_view"
+        app:layout_constraintTop_toBottomOf="@+id/artist_name_text_view" />
+
+    <LinearLayout
+        android:id="@+id/genre_view"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/categorie_text_view"
+        app:layout_constraintTop_toBottomOf="@+id/categorie_text_view"></LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/pays_view"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/genre_view"
+        app:layout_constraintTop_toBottomOf="@+id/genre_view"></LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
