--- a/app/src/main/res/layout/artiste_details_fragment.xml
+++ b/app/src/main/res/layout/artiste_details_fragment.xml
@@ -11,7 +11,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent">
 
         <ImageView
             android:id="@+id/imageView"
@@ -28,8 +29,11 @@
 
         <TextView
             android:id="@+id/nomGroupe"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="center"
             android:text="nom_du_groupe"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -40,22 +44,24 @@
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="15dp"
             android:layout_marginBottom="8dp"
             android:text="Genre"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView6"
+            app:layout_constraintBottom_toTopOf="@+id/paysDetailTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.057"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nomGroupe" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/paysDetailTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="le_pays_d_origine"
             android:textAlignment="viewStart"
             android:textSize="20sp"
@@ -66,52 +72,30 @@
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
         <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
+            android:id="@+id/descriptionView"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="1dp"
+            android:justificationMode="inter_word"
             android:text="descriptionGroupe"
             android:textAlignment="viewStart"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/lienButton1"
+            app:layout_constraintBottom_toTopOf="@+id/link_layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.304"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            app:layout_constraintTop_toBottomOf="@+id/paysDetailTextView" />
 
-
-        <ImageButton
-            android:id="@+id/lienButton1"
-            android:layout_width="250px"
-            android:layout_height="250px"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="362dp"
-            android:contentDescription="https://www.instagram.com/fimubelfort/"
-            android:contextClickable="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7"
-            tools:ignore="TouchTargetSizeCheck" />
-
-        <ImageButton
-            android:id="@+id/imageButton3"
-            android:layout_width="250px"
-            android:layout_height="250px"
-            android:layout_marginLeft="28dp"
-            android:layout_marginTop="12dp"
-            android:contentDescription="https://twitter.com/fimubelfort"
-            app:layout_constraintLeft_toRightOf="@+id/lienButton1"
-            app:layout_constraintTop_toBottomOf="@+id/textView7"
-            tools:ignore="TouchTargetSizeCheck" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="121dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="121dp"
             android:text="Programme"
             android:textAlignment="center"
@@ -121,7 +105,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lienButton1"
+            app:layout_constraintTop_toBottomOf="@+id/link_layout"
             tools:text="Programmation" />
 
 
@@ -142,16 +126,37 @@
             tools:text="horraire de passage" />
 
         <ImageButton
+            android:background="@android:color/transparent"
             android:id="@+id/VideoGroupe"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:adjustViewBounds="true"
             android:contentDescription="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+            android:cropToPadding="true"
+            android:scaleType="fitCenter"
+            android:src="@drawable/mdi_youtube"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/horrairePassage"
-            tools:ignore="TouchTargetSizeCheck" />
+            tools:ignore="TouchTargetSizeCheck"
+            tools:src="@drawable/mdi_youtube" />
+
+        <LinearLayout
+            android:id="@+id/link_layout"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:background="@android:color/transparent"
+            android:gravity="start"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/descriptionView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
