--- a/app/src/main/res/layout/fragment_planning.xml
+++ b/app/src/main/res/layout/fragment_planning.xml
@@ -4,45 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.planning.PlanningFragment" >
+    tools:context=".ui.planning.PlanningFragment">
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
+        android:layout_marginTop="15dp"
         android:text="11 SEPT"
         app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="69dp" />
+        app:layout_constraintTop_toTopOf="@+id/scrollView2" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#9C7BCA"
         android:text="12 SEPT"
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintStart_toEndOf="@+id/button"
-        tools:layout_editor_absoluteY="69dp" />
+        app:layout_constraintTop_toTopOf="@+id/button" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="44dp"
+        android:backgroundTint="#9C7BCA"
         android:text="13 SEPT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button2"
-        tools:layout_editor_absoluteY="69dp" />
+        app:layout_constraintTop_toTopOf="@+id/button" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
@@ -57,6 +62,8 @@
                         android:id="@+id/imageView2"
                         android:layout_width="1745dp"
                         android:layout_height="1600dp"
+                        android:adjustViewBounds="true"
+                        android:cropToPadding="true"
                         android:src="@drawable/planning" />
                 </LinearLayout>
             </HorizontalScrollView>
