--- a/app/src/main/res/layout/news_details_fragment.xml
+++ b/app/src/main/res/layout/news_details_fragment.xml
@@ -26,24 +26,24 @@
                     android:id="@+id/side_bare_news"
                     android:layout_width="9dp"
                     android:layout_height="0dp"
+                    android:layout_marginStart="10dp"
                     android:background="@drawable/news_side_bar"
                     app:layout_constraintBottom_toBottomOf="@+id/actu_title"
-                    app:layout_constraintEnd_toStartOf="@+id/actu_title"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/actu_title" />
 
                 <TextView
                     android:id="@+id/actu_title"
-                    android:layout_width="390dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="20dp"
+                    android:layout_marginEnd="10dp"
                     android:text="Titre de l'acutalité"
                     android:textSize="32sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.489"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/side_bare_news"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
@@ -62,7 +62,7 @@
 
                 <TextView
                     android:id="@+id/actu_core"
-                    android:layout_width="390dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="20dp"
