--- a/app/src/main/res/layout/news_recycler_item.xml
+++ b/app/src/main/res/layout/news_recycler_item.xml
@@ -38,10 +38,8 @@
         android:layout_height="60dp"
         android:layout_marginEnd="15dp"
         android:text="Core de l'actualité"
-        app:layout_constraintBottom_toTopOf="@+id/news_core"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.65"
+        app:layout_constraintTop_toTopOf="@+id/actu_title"
         app:srcCompat="@drawable/ic_home_black_24dp" />
 
     <TextView
