--- a/app/src/main/res/layout/concert_layout.xml
+++ b/app/src/main/res/layout/concert_layout.xml
@@ -2,11 +2,10 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rectangle"
     android:layout_width="250dp"
-    android:layout_height="match_parent"
-    android:background="@drawable/simple_rect"
-    android:backgroundTint="#3B199A">
+    android:layout_height="match_parent">
 
 
     <TextView
@@ -15,17 +14,17 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
         android:text="Nom artiste très long qui tient pas sur une ligne"
         android:textAlignment="center"
-        android:textColor="#AEAEAE"
+        android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/pays_artiste_concert_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
@@ -35,16 +34,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="15dp"
         android:gravity="center"
         android:text="pays artiste"
-        android:textColor="#AEAEAE"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/artiste_name_concert_view" />
 
