--- a/app/src/main/res/layout/artist_recycler_item.xml
+++ b/app/src/main/res/layout/artist_recycler_item.xml
@@ -35,18 +35,16 @@
 
     <TextView
         android:id="@+id/artist_name_text_view"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="25dp"
-        android:text="Nom artiste"
         android:ellipsize="end"
         android:maxLines="1"
+        android:text="Nom artiste"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageCard"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,13 +52,13 @@
         android:id="@+id/categorie_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginEnd="15dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="A lot of text here so that it overflow"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@id/artist_name_text_view"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/artist_name_text_view"
         app:layout_constraintTop_toBottomOf="@+id/artist_name_text_view" />
 
@@ -87,6 +85,18 @@
         app:layout_constraintEnd_toEndOf="@+id/genresTextView"
         app:layout_constraintStart_toStartOf="@+id/genresTextView"
         app:layout_constraintTop_toBottomOf="@+id/genresTextView" />
+
+    <View
+        android:id="@+id/pastille_genre"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="10dp"
+        android:background="@drawable/circle"
+        app:layout_constraintBottom_toBottomOf="@+id/artist_name_text_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/artist_name_text_view"
+        app:layout_constraintTop_toTopOf="@+id/artist_name_text_view" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
