--- a/app/src/main/res/layout/scene_recycler_item.xml
+++ b/app/src/main/res/layout/scene_recycler_item.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/scene_name"
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:autoSizeTextType="none"
