--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.FIMUDROID" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
+    <style name="Theme.FIMUDROID" parent="Theme.Material3.DayNight">
+    <!-- Primary brand color. -->
         <item name="colorPrimary">#db3c96</item>
         <item name="colorPrimaryVariant">#db3c96</item>
         <item name="colorOnPrimary">@color/white</item>
