--- a/app/src/main/res/layout/artist_recycler.xml
+++ b/app/src/main/res/layout/artist_recycler.xml
@@ -34,9 +34,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/artist_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_width="409dp"
+        android:layout_height="459dp"
+        android:layout_marginTop="4dp"
         android:scrollbars="vertical"
         app:layoutManager="LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
