--- a/app/src/main/res/layout/fragment_planning.xml
+++ b/app/src/main/res/layout/fragment_planning.xml
@@ -30,8 +30,11 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cat_legend_linear_layout">
+        app:layout_constraintTop_toBottomOf="@id/cat_legend_linear_layout"
+        app:layout_constraintVertical_bias="0.0"
+        >
 
         <ScrollView
             android:layout_width="wrap_content"
@@ -43,8 +46,7 @@
                 android:layout_height="wrap_content"
                 android:divider="@drawable/divider"
                 android:orientation="vertical"
-                android:showDividers="end|middle">
-            </com.example.fimudroid.ui.planning.CustomLinearLayout>
+                android:showDividers="end|middle"></com.example.fimudroid.ui.planning.CustomLinearLayout>
 
         </ScrollView>
 
