--- a/app/src/main/res/layout/fragment_planning.xml
+++ b/app/src/main/res/layout/fragment_planning.xml
@@ -20,10 +20,10 @@
         android:id="@+id/toggleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:singleSelection="true">
-    </com.google.android.material.button.MaterialButtonToggleGroup>
+        app:singleSelection="true"></com.google.android.material.button.MaterialButtonToggleGroup>
 
     <HorizontalScrollView
         android:layout_width="0dp"
